--- a/buildbot_travis/ui/src/app/configEditors/workers_config.tpl.jade
+++ b/buildbot_travis/ui/src/app/configEditors/workers_config.tpl.jade
@@ -25,19 +25,33 @@ config-page
                     label.col-sm-2.control-label password for the workers:
                     .col-sm-10
                         input.form-control(type="text", ng-model="worker.password", ng-init="change_me")
-
-                .form-group(ng-if="worker.type=='DockerWorker'")
-                    label.col-sm-2.control-label image name:
-                    .col-sm-10
-                        input.form-control(type="text", ng-model="worker.image", placeholder = "buildbot/worker-%{prop:language}")
-                .alert.alert-info(ng-if="worker.type=='DockerWorker'")
-                    b Note:&nbsp;
-                    | image name is interpolated with buildrequest properties
+                div(ng-if="worker.type=='HyperWorker'")
+                    .form-group(ng-if="worker.type=='HyperWorker'")
+                        label.col-sm-2.control-label Hyper Host Url:
+                        .col-sm-10
+                            input.form-control(type="text", ng-model="worker.hyper_host", placeholder = "tcp://us-west-1.hyper.sh:443")
+                    .form-group
+                        label.col-sm-2.control-label accesskey:
+                        .col-sm-10
+                            input.form-control(type="text", ng-model="worker.hyper_accesskey")
+                    .form-group
+                        label.col-sm-2.control-label secretkey:
+                        .col-sm-10
+                            input.form-control(type="text", ng-model="worker.hyper_secretkey")
+                div(ng-if="worker.type=='DockerWorker' || worker.type=='HyperWorker'")
+                    .form-group
+                        label.col-sm-2.control-label image name:
+                        .col-sm-10
+                            input.form-control(type="text", ng-model="worker.image", placeholder = "buildbot/worker-%{prop:language}")
+                    .alert.alert-info
+                        b Note:&nbsp;
+                        | image name is interpolated with buildrequest properties
 
                 .form-group(ng-if="worker.type=='DockerWorker'")
                     label.col-sm-2.control-label Docker Host Url:
                     .col-sm-10
                         input.form-control(type="text", ng-model="worker.docker_host", placeholder = "tcp://dockerhost:2375")
+
     .row
         .col-sm-12
             .input-group.filelist
@@ -45,5 +59,6 @@ config-page
                     option(value="LocalWorker") LocalWorker (a worker running on the master host)
                     option(value="Worker") Worker (a worker running on another host)
                     option(value="DockerWorker") DockerWorker (a worker spawn on demand on a docker host)
+                    option(value="HyperWorker") HyperWorker (a worker spawn on demand on a hyper caas)
                 .input-group-btn
                     .btn.btn-default(ng-click="worker_add()") +
